Fixed overflowing of selection slots. Added a Game Over screen, a 60 seconds timer, and some basic stats about the last round

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Sansation", sans-serif;
 }
 .App{
   background-color: #D6EAF8;
@@ -14,6 +15,7 @@
 }
 .game-container {
   width: 500px;
+  max-width: 100vw;
   height: 100%;
   display: flex;
   flex-direction: column;
