--- a/src/components/Buttons/Buttons.module.css
+++ b/src/components/Buttons/Buttons.module.css
@@ -42,6 +42,7 @@
     align-items: center;
     justify-content: center;
     transition: all 0.1s;
+    flex-shrink: 0;
 }
 .slot.filled{
     background-color: #66e966;
@@ -53,5 +54,4 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
 }
